# oak-template

./: .gitignore  main.py  oakapp.toml  pyproject.toml  requirements.txt
utils/: snaps_producer.py
